--- a/portfolio_EN.html
+++ b/portfolio_EN.html
@@ -99,6 +99,6 @@
         </section>
         
     </footer>
-    <script src="/Resources/JS/portfolio.js"></script>
+    <script src="../JS/portfolio.js"></script>
 </body>
 </html>
