--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1 class="unselectable">AC</h1>
     <h2 class="unselectable">alejandra cardenas</h2>
     </div>
-    <a href="/portfolio_EN.html" class="PC">Click Here To Enter</a>
-    <a href="/portfolio_EN.html" class="Mobile">Tap Here To Enter</a>
+    <a href="../portfolio_EN.html" class="PC">Click Here To Enter</a>
+    <a href="../portfolio_EN.html" class="Mobile">Tap Here To Enter</a>
     </div>
 
 
