--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Resources/css/index.css">
+    <link rel="stylesheet" href="resources/css/index.css">
 </head>
 <body>
     <div class="background-container"></div>
@@ -17,11 +17,11 @@
     <h1 class="unselectable">AC</h1>
     <h2 class="unselectable">alejandra cardenas</h2>
     </div>
-    <a href="portfolio_EN.html" class="PC">Click Here To Enter</a>
-    <a href="portfolio_EN.html" class="Mobile">Tap Here To Enter</a>
+    <a href="portfolio_en.html" class="PC">Click Here To Enter</a>
+    <a href="portfolio_en.html" class="Mobile">Tap Here To Enter</a>
     </div>
 
 
-    <script src="../js/index.js"></script>
+    <script src="resources/js/index.js"></script>
 </body>
 </html>
