--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div class="Title"> 
     <div class="hover-enlarge">
     <h1 class="unselectable">AC</h1>
-    <h2 class="unselectable">alejandra cardenas</h2>
+    <h2 class="unselectable">Alejandra Cárdenas</h2>
+    <h3 class="unselectable">international makeup artist</h3>
+
     </div>
     <a href="portfolio_en.html" class="PC">Click Here To Enter</a>
     <a href="portfolio_en.html" class="Mobile">Tap Here To Enter</a>
