--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="Title"> 
     <div class="hover-enlarge">
     <h1 class="unselectable">AC</h1>
-    <h2 class="unselectable">Alejandra Cárdenas</h2>
+    <h2 class="unselectable">Alejandra Cardenas</h2>
     <h3 class="unselectable">international makeup artist</h3>
 
     </div>
