--- a/portfolio_en.html
+++ b/portfolio_en.html
@@ -18,7 +18,7 @@
             <div class="hover-enlarge Title">
                 <a href="index.html" class="homepage-link">
                 <h1 class="unselectable">AC</h1></a>
-                <h2 class="unselectable">alejandra cárdenas</h2>
+                <h2 class="unselectable">alejandra cardenas</h2>
                 </div>
             <ul class="links">
                 <li><a href="portfolio_en.html">Portfolio</a></li>
