--- a/Portafolio.html
+++ b/Portafolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Alejandra Cardenas | MUA | Portafolio</title>
     <link rel="stylesheet" href="resource/css/portfolio.css">
 </head>
 <body>
@@ -11,19 +11,19 @@
     <header>
         <nav class="navbar">
             <ul class="languages">
-                <li><a href="portfolio_es.html">ESP</a></li>
-                <li><a href="portfolio_en.html">ING</a></li>
+                <li><a href="https://alejacalx.com/Portafolio">ESP</a></li>
+                <li><a href="https://alejacalx.com/Portfolio">ING</a></li>
             </ul>
             
             <div class="hover-enlarge Title">
-                <a href="index_es.html" class="homepage-link">
+                <a href="https://alejacalx.com/Inicio" class="homepage-link">
                 <h1 class="unselectable">AC</h1></a>
                 <h2 class="unselectable">alejandra cardenas</h2>
                 </div>
             <ul class="links">
-                <li><a href="portfolio_es.html">Portafolio</a></li>
-                <li><a href="about_es.html">Acerca De</a></li>
-                <li><a href="contact_es.html">Contacto</a></li>
+                <li><a href="https://alejacalx.com/Portafolio">Portafolio</a></li>
+                <li><a href="https://alejacalx.com/Acerca-De">Acerca De</a></li>
+                <li><a href="https://alejacalx.com/Contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
