--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Alejandra Cardenas | MUA | Portfolio</title>
     <link rel="stylesheet" href="resource/css/portfolio.css">
 </head>
 <body>
@@ -11,19 +11,19 @@
     <header>
         <nav class="navbar">
             <ul class="languages">
-                <li><a href="portfolio_es.html">ESP</a></li>
-                <li><a href="portfolio_en.html">ENG</a></li>
+                <li><a href="https://alejacalx.com/Portafolio">ESP</a></li>
+                <li><a href="https://alejacalx.com/Portfolio">ENG</a></li>
             </ul>
             
             <div class="hover-enlarge Title">
-                <a href="index.html" class="homepage-link">
+                <a href="https://alejacalx.com" class="homepage-link">
                 <h1 class="unselectable">AC</h1></a>
                 <h2 class="unselectable">alejandra cardenas</h2>
                 </div>
             <ul class="links">
-                <li><a href="portfolio_en.html">Portfolio</a></li>
-                <li><a href="about_en.html">About</a></li>
-                <li><a href="contact_en.html">Contact</a></li>
+                <li><a href="https://alejacalx.com/Portfolio">Portfolio</a></li>
+                <li><a href="https://alejacalx.com/About">About</a></li>
+                <li><a href="https://alejacalx.com/Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
