--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta class="active-bar" name="Theme-Color" content="#000000">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alejandra Cardenas | MUA</title>
     <link rel="stylesheet" href="resource/css/index.css">
 </head>
 <body>
@@ -19,8 +19,8 @@
     <h3 class="unselectable">international makeup artist</h3>
 
     </div>
-    <a href="portfolio_en.html" class="PC">Click Here To Enter</a>
-    <a href="portfolio_en.html" class="Mobile">Tap Here To Enter</a>
+    <a href="https://alejacalx.com/Portfolio" class="PC">Click Here To Enter</a>
+    <a href="https://alejacalx.com/Portfolio" class="Mobile">Tap Here To Enter</a>
     </div>
 
 
