--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra Cardenas | MUA | About</title>
     <link rel="stylesheet" href="resource/css/about.css">
+    <link rel="icon" type="image/x-icon" href="favicon.PNG">
 </head>
 <body>
      <!-- Header Start-->
