--- a/Contacto.html
+++ b/Contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra Cardenas | MUA | Contacto</title>
     <link rel="stylesheet" href="resource/css/contact.css">
+    <link rel="icon" type="image/x-icon" href="favicon.PNG">
     
 </head>
 
