--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra Cardenas | MUA</title>
     <link rel="stylesheet" href="resource/css/index.css">
+    <link rel="icon" type="image/x-icon" href="favicon.PNG">
 </head>
 <body>
     <div class="background-container"></div>
