--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alejandra Cardenas | MUA | Contacto</title>
+    <title>Alejandra Cardenas | MUA | Contact</title>
     <link rel="stylesheet" href="resource/css/contact.css">
     <link rel="icon" type="image/x-icon" href="favicon.PNG">
     
