--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta class="active-bar" name="Theme-Color" content="#000000">
-    
+    <meta name="description" content="Alejandra Cardenas is a Madrid-based international makeup artist specializing in creating stunning looks for clients across Europe. Explore her portfolio and discover the art of beauty.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra Cardenas | MUA</title>
     <link rel="stylesheet" href="resource/css/index.css">
