search engine update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandra Cardenas | MUA</title>
     <link rel="stylesheet" href="resource/css/index.css">
-    <link rel="icon" type="image/x-icon" href="favicon.PNG">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="background-container"></div>
@@ -22,6 +22,9 @@
     </div>
     <a href="https://alejacalx.com/Portfolio" class="PC">Click Here To Enter</a>
     <a href="https://alejacalx.com/Portfolio" class="Mobile">Tap Here To Enter</a>
+    </div>
+    <div class="description">
+        <p class="unselectable">Alejandra Cardenas is a Madrid-based international makeup artist specializing in creating stunning looks for clients across Europe. Explore her portfolio and discover the art of beauty.</p>
     </div>
 
 
